--- a/index.html
+++ b/index.html
@@ -32,13 +32,20 @@
       <br />
       <h1>JavaScript Plus -JS16-ASYNC-2</h1>
       <h2>Flag App</h2>
+      <div class="input-group input-group-lg container mb-3">
+     
+        <input type="text" class="form-control inp" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-md">
+      </div>
+      <button type="button" class="btn btn-primary btn-lg">Large button</button>
     </header>
     <main class="container mt-4">
       <div class="input"></div>
-
+      <div class="error"></div>
       <div
-        class="countries mt-4 d-flex flex-column align-items-center gap-4"
-      ></div>
+        class="countries mt-4 "
+      >
+  
+  </div>
     </main>
 
     <script src="app.js"></script>
