--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <header>
     <div class="title">
 
-      <img src="./img/istockphoto-187169448-1024x1024.jpg" class="all" alt="">
+      <img src="./img/istockphoto-187169448-1024x1024.jpg" width="150px" class="all" alt="">
     </div>
     <br />
-    <h1>Flag App</h1>
-    <h2>Please Enter a Country To See Its Information </h2>
+
+    <h4>Please Enter a Country To See Its Information </h4>
     <div class="container justify-content-center"><select class="form-select select1 justify-content-center"
         aria-label="Default select example">
         <option selected>Select a Country</option>
@@ -36,7 +36,7 @@
 
       <!-- <input type="text" class="form-control inp " aria-label="Sizing example input" aria-describedby="inputGroup-sizing-md"> -->
     </div>
-    <button type="button" class="btn btn-primary btn-lg">SELECT</button>
+    <!-- <button type="button" class="btn btn-primary btn-lg">SELECT</button> -->
   </header>
   <main class="container mt-4">
     <div class="input"></div>
